# Advanced-Analytics-03

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  serve.py  serve_batch.py
data/: .part-00000-005dc8d1-c43d-417f-bfd4-2dd77f08b74a-c000.json.crc  .part-00000-01b5ad1e-4f52-49fb-aec8-85212d1f2f5f-c000.json.crc  .part-00000-02350cf0-b283-4240-9bca-eee42c1c6bf0-c000.json.crc  .part-00000-034e8754-3fba-42ce-8c61-c320b7b56476-c000.json.crc  .part-00000-03cc3218-c0ca-4dc9-bf39-38807d53e8f0-c000.json.crc  .part-00000-03d4b87c-1f37-4661-bc63-8fd16f969fdb-c000.json.crc  .part-00000-043bc45e-5b31-484b-a43b-2b4451aaf1f3-c000.json.crc  .part-00000-0463f8b1-67d8-4321-a0fa-bb2ef7e732f2-c000.json.crc  .part-00000-0496e148-1a89-4624-b8aa-ee496df04324-c000.json.crc  .part-00000-0526d2e2-2c8a-421a-831b-8f654c5ca1c5-c000.json.crc  .part-00000-05a7a64c-6a74-424c-8f3f-1628161de3db-c000.json.crc  .part-00000-063e21fb-9abe-48c5-8f5e-358ea8785632-c000.json.crc  .part-00000-065d8d4e-bf1c-4846-9a74-d32560cefbec-c000.json.crc  .part-00000-06d8d607-5edc-47e8-83b7-f1bd7c05c479-c000.json.crc  .part-00000-06e906fb-b8a0-4c61-b827-00bb36586bab-c000.json.crc  .part-00000-06ea4db5-c353-491b-886a-c638b52ecc38-c000.json.crc  .part-00000-0716759b-bfb1-499b-8c89-adc5d51f3472-c000.json.crc  .part-00000-07a6b0d1-25c4-477c-8b04-7279d1eba4f4-c000.json.crc  .part-00000-08d9baf7-ecc4-4727-abca-0d297db709b2-c000.json.crc  .part-00000-09cc9a8b-a89a-40f8-b281-5b3e1ed548d2-c000.json.crc  .part-00000-0a206f29-5fbb-4e9d-91ff-f3910bde8232-c000.json.crc  (+4368 more)
notebooks/: all_stream.ipynb  augment.ipynb  (+38 more)
(+21516 files in other folders)
