[project]
name = "advanced-analytics-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "adapters>=1.1.1",
    "datasets>=3.5.1",
    "findspark>=2.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "plotly>=6.0.1",
    "pyspark>=3.5.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "setfit>=1.1.2",
    "skore>=0.8.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "xgboost>=3.0.0",
]
